# goose

./: .gitignore  CMakeLists.txt  README.md  compile.sh  test.sh
include/: helper.h  symbol.h
include/lexer/: dfa.h  state.h  state_list.h  token.h  trie_node.h
include/parser/: grammar.h  parser.h  parser_node.h  symbol.h
src/: Makefile  helper.cpp  main.cpp
src/lexer/: Makefile  dfa.cpp  trie_node.cpp
src/parser/: Makefile  parser.cpp
tests/: CMakeLists.txt  Makefile  _probe.cpp  lexer_test  lexer_test.cpp  parser_test.cpp
